# aoc2022

./: Cargo.toml
benches/: bench.rs
day01/: .gitignore  Cargo.toml  README.md
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/benches/: bench.rs
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/benches/: bench.rs
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/benches/: bench.rs
day08/src/: lib.rs  main.rs
day09/: Cargo.toml
day09/src/: lib.rs  main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/benches/: bench.rs
day12/src/: lib.rs  main.rs
day13/: Cargo.toml  grammar.pest
day13/src/: lib.rs  main.rs
day14/: Cargo.toml
day14/src/: lib.rs  main.rs
day15/: Cargo.toml
day15/benches/: bench.rs
day15/src/: lib.rs  main.rs
day20/: Cargo.toml
day20/src/: main.rs
day21/: Cargo.toml
day21/src/: main.rs
day25/: Cargo.toml
day25/src/: main.rs
src/: main.rs
