[package]
name = "day13"
version = "0.1.0"
authors = ["Yoep Kortekaas <y.a.m.kortekaas@utwente.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest_derive = "2.0"
pest = "2.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false